Initial commit - backend

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# MongoDB URI
-# MONGO_URI=mongodb+srv://uzwalpandey1234:Ujjawal9804@cluster0.t1hynbh.mongodb.net/examzone_db?retryWrites=true&w=majority&appName=Cluster0
+MongoDB URI
+MONGO_URI=mongodb+srv://uzwalpandey1234:Ujjawal9804@cluster0.t1hynbh.mongodb.net/examzone_db?retryWrites=true&w=majority&appName=Cluster0
 
 
 # JWT secret for signing user tokens
