--- a/.env
+++ b/.env
@@ -1,1 +1,16 @@
+MongoDB URI
+MONGO_URI=mongodb+srv://uzwalpandey1234:Ujjawal9804@cluster0.t1hynbh.mongodb.net/examzone_db?retryWrites=true&w=majority&appName=Cluster0
+
+
+# JWT secret for signing user tokens
+JWT_SECRET=super_secret_jwt_key_12345
+
+# Optional: Server Port (if you're using process.env.PORT)
+PORT=5000
+
+# Optional: Cloudinary (if you're using it for image upload)
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+
 
